--- a/frontPage.html
+++ b/frontPage.html
@@ -46,24 +46,24 @@
 
     <script>
         window.onload=async()=>{
-            const data=await fetchData();
-            console.log(data)
+            fetchData()
         }
         const container=document.querySelector('#containerStrivizon')
+
         async function fetchData(){
             try {
                 const response=await fetch('https://striveschool-api.herokuapp.com/api/product/', {
                     headers:{
                         method: 'GET',
+                        'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MjA1MGFjY2RhNDBjOTAwMTVmYzhkNjkiLCJpYXQiOjE2NDY4MzM3MTMsImV4cCI6MTY0ODA0MzMxM30.YLa1a_Wtl5CjmvMh6XuqWcJhyGKYdhDCGoYiZCmuEjc',
                         'Content-Type': 'application/json',
-                        Authorization: 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MjA1MGFjY2RhNDBjOTAwMTVmYzhkNjkiLCJpYXQiOjE2NDY4MzM3MTMsImV4cCI6MTY0ODA0MzMxM30.YLa1a_Wtl5CjmvMh6XuqWcJhyGKYdhDCGoYiZCmuEjc'
                     }
                 })
                 const data=await response.json()
                 console.log(data)
                 renderData(data)
             } catch (error) {
-                
+                console.log(error)
             }
         }
 
