--- a/backOffice.html
+++ b/backOffice.html
@@ -66,7 +66,7 @@
             const body=JSON.stringify(bodyObj)
             console.log(body)
 
-            const response= await fetch ('https://striveschool-api.herokuapp.com/api/product',
+            const response= await fetch ('https://striveschool-api.herokuapp.com/api/product/',
             {
                 headers:{
                     method: 'POST',
