--- a/backOffice.html
+++ b/backOffice.html
@@ -65,7 +65,6 @@
             }
             
             const body=JSON.stringify(bodyObj)
-            console.log(body)
 
             const response= await fetch ('https://striveschool-api.herokuapp.com/api/product/',
             {
@@ -77,6 +76,8 @@
                 body:body
             })
 
+
+            //to check if the response is successful
             if(response.ok){
                 const data=await response.json()
                 alert('success: the product is now on the front page')
