--- a/backOffice.html
+++ b/backOffice.html
@@ -37,6 +37,7 @@
         <input id="photo" class="my-3 " type="link" placeholder="photo's product">
         <input id="price" class="my-3 " type="number" placeholder="price's product">
         <button type="submit">Add the product</button>
+        <button type="submit" onclick="handleDelete()" class="d-none btn btn-danger">Delete</button>
     </form>
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -53,6 +54,35 @@
         const brand = document.querySelector('#brand')
         const photo = document.querySelector('#photo')
         const price=document.querySelector('#price')
+        const eventId=(new URLSearchParams(window.location.search)).get('id')
+        const formButton=document.querySelector('form button')
+        const deleteButton=document.querySelector('btn-danger')
+
+        window.onload=async()=>{
+            if(eventId){
+                try {
+                    const response=await fetch('https://striveschool-api.herokuapp.com/api/product/'+ eventId)
+                    if(response.status===400){
+                        alert('The product is already delete, or ')
+                    } else if(!status.ok){
+                        alert('something wrong, retry later')
+                    }
+                    const data=await response.json()
+                    name.value = data.name
+                    description.value = data.description
+                    price.value = data.price
+                    time.value = data.time.slice(0,-8)
+
+                    formButton.innerText='Update'
+
+                    deleteButton.classList.remove('d-none')
+
+                } catch (error) {
+                    alert(error.message)
+                    window.location.assign('./backOffice.html')
+                }
+            }
+        }
 
         async function handleChange(e){
             e.preventDefault()
@@ -66,9 +96,14 @@
             
             const body=JSON.stringify(bodyObj)
 
-            const response= await fetch ('https://striveschool-api.herokuapp.com/api/product/',
+            const endpoint=
+                eventId? 'https://striveschool-api.herokuapp.com/api/product/'+ eventId: 'https://striveschool-api.herokuapp.com/api/product/'
+
+            const method=eventId?'PUT':'POST'
+
+            const response= await fetch (endpoint,
             {
-                method: 'POST',
+                method: method,
                 headers:{
                     'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MjA1MGFjY2RhNDBjOTAwMTVmYzhkNjkiLCJpYXQiOjE2NDY4MzM3MTMsImV4cCI6MTY0ODA0MzMxM30.YLa1a_Wtl5CjmvMh6XuqWcJhyGKYdhDCGoYiZCmuEjc',
                     'Content-type': 'application/json'
@@ -83,6 +118,21 @@
                 alert('success: the product is now on the front page')
             } else{
                 alert('Oh no, something went wrong')
+            }
+        }
+
+
+        async function handleDelete(){
+            if(confirm('are you sure you want to delete this product?')){
+                const response=await fetch(endpoint, {
+                    method:'DELETE'
+                }) 
+                if(response.ok){
+                    alert('element deleted succesfully')
+                    window.location.href('./frontPage.html')
+                } else{
+                    alert ('Something went wrong, retry')
+                }
             }
         }
 
