--- a/backOffice.html
+++ b/backOffice.html
@@ -55,23 +55,32 @@
         const photo = document.querySelector('#photo')
         const price=document.querySelector('#price')
         const eventId=(new URLSearchParams(window.location.search)).get('id')
+        console.log(eventId)
         const formButton=document.querySelector('form button')
-        const deleteButton=document.querySelector('btn-danger')
+        const deleteButton=document.querySelector('.btn-danger')
 
         window.onload=async()=>{
             if(eventId){
                 try {
-                    const response=await fetch('https://striveschool-api.herokuapp.com/api/product/'+ eventId)
+                    const response=await fetch('https://striveschool-api.herokuapp.com/api/product/'+ eventId, {
+                        method: 'GET',
+                        headers: {
+                            'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MjA1MGFjY2RhNDBjOTAwMTVmYzhkNjkiLCJpYXQiOjE2NDY4MzM3MTMsImV4cCI6MTY0ODA0MzMxM30.YLa1a_Wtl5CjmvMh6XuqWcJhyGKYdhDCGoYiZCmuEjc',
+                            'Content-type': 'application/json'
+                        },
+                    })
+                    console.log(response.status)
                     if(response.status===400){
-                        alert('The product is already delete, or ')
-                    } else if(!status.ok){
+                        alert('The product is already delete ')
+                    } else if(!response.ok){
                         alert('something wrong, retry later')
                     }
                     const data=await response.json()
                     name.value = data.name
                     description.value = data.description
                     price.value = data.price
-                    time.value = data.time.slice(0,-8)
+                    brand.value=data.brand
+                    photo.value=data.imageUrl
 
                     formButton.innerText='Update'
 
@@ -115,7 +124,9 @@
             //to check if the response is successful
             if(response.ok){
                 const data=await response.json()
-                alert('success: the product is now on the front page')
+                alert('success: the product is now'+(eventId?' updated':' created'))
+                    window.location.href = '/frontPage.html'
+
             } else{
                 alert('Oh no, something went wrong')
             }
@@ -124,12 +135,16 @@
 
         async function handleDelete(){
             if(confirm('are you sure you want to delete this product?')){
-                const response=await fetch(endpoint, {
-                    method:'DELETE'
+                const response=await fetch('https://striveschool-api.herokuapp.com/api/product/' + eventId, {
+                    method:'DELETE',
+                    headers: {
+                        'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MjA1MGFjY2RhNDBjOTAwMTVmYzhkNjkiLCJpYXQiOjE2NDY4MzM3MTMsImV4cCI6MTY0ODA0MzMxM30.YLa1a_Wtl5CjmvMh6XuqWcJhyGKYdhDCGoYiZCmuEjc',
+                        'Content-type': 'application/json'
+                    },
                 }) 
                 if(response.ok){
                     alert('element deleted succesfully')
-                    window.location.href('./frontPage.html')
+                    window.location.href='/frontPage.html'
                 } else{
                     alert ('Something went wrong, retry')
                 }
