--- a/frontPage.html
+++ b/frontPage.html
@@ -77,7 +77,7 @@
                                 <p class="card-text">${element.description}</p>
                                 <p class="card-text">${element.price} $</p>
                                 <p class="card-text">${element.brand}</p>
-                                <button class='btn btn-success' href='/details.html?id${element._id}'>See details</button>
+                                <a class='btn btn-success' href='/details.html?id=${element._id}'>See details</a>
                             </div>
                         </div>
                     </div>
