--- a/frontPage.html
+++ b/frontPage.html
@@ -30,7 +30,10 @@
         </div>
     </nav>
     <div class="container mt-3">
-        <div class="row" id="containerStrivizon">
+        <div id="spinner" class="spinner-grow" style="width: 20rem; height: 20rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="row d-none" id="containerStrivizon">
         </div>
     </div>
 
@@ -49,6 +52,7 @@
             fetchData()
         }
         const container=document.querySelector('#containerStrivizon')
+        const spinner=document.querySelector('#spinner')
 
         async function fetchData(){
             try {
@@ -63,6 +67,10 @@
                 renderData(data)
             } catch (error) {
                 console.log(error)
+            } finally{
+                spinner.classList.add('d-none')
+                container.classList.remove('d-none')
+
             }
         }
 
