--- a/details.html
+++ b/details.html
@@ -15,7 +15,10 @@
 
 <body>
     <h1>Details</h1>
-    <div class="container" id="detailsContainer">
+    <div id="spinner" class="spinner-border" style="width: 20rem; height: 20rem;" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+    <div class="container d-none" id="detailsContainer">
         <img src="" id="elementImg" alt="">
         <div id="elementName"></div>
         <div id="elementDescription"></div>
@@ -43,6 +46,7 @@
         const img=document.querySelector('#elementImg')
         const brand=document.querySelector('#elementBrand')
         const goToEdit=document.querySelector('#editPage')
+        const spinner=document.querySelector('#spinner')
 
         window.onload=async ()=>{
             try {
@@ -63,7 +67,10 @@
 
 
             } catch (error) {
-                
+                alert(error.message)
+            } finally{
+                spinner.classList.add('d-none')
+                container.classList.remove('d-none')
             }
         }
     </script>
